# flixOpt

./: .gitignore  LICENSE  README.md  __init__.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create_zip.yml  publish.yml  python-app.yaml  python-app.yml
Tutorials/: Tutorial_01.ipynb
docs/: contribute.md  examples.md  getting-started.md  index.md  latex-example.md
docs/api/: bus.md  calculation.md  components.md  datatypes.md  effect.md  flow-system.md  flow.md  linear-converter.md
docs/api/components/: component.md  interfaces.md  linear-converter.md  linear-converters.md  sink.md  source.md  source_and_sink.md  storage.md  transmission.md
docs/api/interfaces/: aggregation_parameters.md  invest_parameters.md  on_off_parameters.md
docs/concepts/: overview.md
docs/javascripts/: mathjax.js
examples/: linopy_native_experiments.py
examples/00_Minmal/: minimal_example.py
examples/01_Simple/: simple_example.py
examples/01_simple/: simple_example.py  simple_example_2.py  simple_example_min_rel_test.py
examples/02_Complex/: complex_example.py  complex_example_results.py
examples/02_complex/: example_complex.py  example_complex_ModelAndSolve.py  example_complex_PreProcessing.py  example_complex_WithPostprocessing.py  test_example_complex.py
examples/02_simpleWithParams/: example_complex.py  example_complex_PreProcessing.py
examples/03_Calculation_types/: example_calculation_types.py
examples/03_full_seg_agg/: Model_and_solve.py  test_full_seg_agg.py
examples/04_transportation/: example_transportation.py
examples/05_minmal/: minimal_example.py
examples/Ex00_minmal/: minimal_example.py
examples/Ex01_simple/: simple_example.py  simple_example_Highs.py
examples/Ex02_complex/: complex_example.py  complex_example_results.py  example_complex_ModelAndSolve.py  example_complex_WithPostprocessing.py
examples/Ex03_calculation_types/: example_calculation_types.py
examples/Ex03_full_seg_agg/: Model_and_solve.py
examples/Ex04_transportation/: example_transportation.py
examples/Ex05_minmal/: minimal_example.py
examples/full_seg_agg/: Model_and_solve.py  Zeitreihen2020.csv  test.py  test_full_seg_agg.py
examples/simple/: simple_example.py  simple_example_PreProcessing.py  test_simple_example.py
examples/transportation/: example_transportation.py
examples/xx_other_examples/: optional_flows.py
examples_notebooks/: Model_and_solve.ipynb  example_complex_ModelAndSolve.ipynb  example_transportation.ipynb  simple_example.ipynb
flixOpt/: __init__.py  aggregation.py  basicModeling.py  calculation.py  commons.py  components.py  components_experimental.py  config.py  config.yaml  core.py  effects.py  elements.py  features.py  flixAggregation.py  flixBasics.py  flixBasicsPublic.py  flixComps.py  flixCompsExperimental.py  flixFeatures.py  flixOptHelperFcts.py  flixPlotHelperFcts.py  flixPostprocessing.py  flixStructure.py  flow_system.py  interface.py  io.py  linear_converters.py  math_modeling.py  modeling.py  plotting.py  postprocessing.py  requirements.txt  results.py  results_linopy.py  solvers.py  structure.py  system.py  utils.py
flixopt/: __init__.py  aggregation.py  calculation.py  commons.py  components.py  config.py  config.yaml  core.py  effects.py  elements.py  features.py  flow_system.py  interface.py  linear_converters.py  math_modeling.py  plotting.py  results.py  solvers.py  structure.py  utils.py
pics/: pics.pptx
scripts/: gen_ref_pages.py
tests/: conftest.py  main_test.py  run_all_tests.py  test_dataconverter.py  test_examples.py  test_functional.py  test_integration.py  test_io.py  test_plots.py  test_timeseries.py  tests_unit.py  todos.txt
tests/functional/: run_functional_test.py
tests/functional/modeling_types/: Modeling_types.py
tests/integration/: test_integration.py  test_integration_new.py
tests/integration/ressources/: Modeling_types.py  test_example_complex.py
tests/unittests/: test_units.py
